lab1/Test/L1-A-13-70.output
Error Type B at Line 10
Error Type B at Line 22
Error Type A at Line 31
Error Type A at Line 47
Error Type B at Line 53
Error Type B at Line 56
Error Type A at Line 60
